# 1000Genome_Analysis

./: .dockerignore  .gitignore  .sample.env  Dockerfile  Makefile  README.md  dbt-requirements.txt  dbt_requirements.txt  docker-compose.dev.yaml  main.py  pyproject.toml
dbt_project/: .envrc  .gitignore  dbt_project.yml  profiles.yml
dbt_project/models/marts/: dim_instrument_details.sql  dim_population_details.sql  dim_sample_details.sql  dim_study_details.sql  fct_sequences.sql
dbt_project/models/marts/reports/: paired_sequences.sql  sequence_population.sql  single_sequences.sql
dbt_project/models/staging/: src_genomes.yml  stg_sequence_index.sql
orchestration/: __init__.py  assets.py  constants.py
src/config/: databases.yaml  databases.yaml.example  manager.py  settings.py
src/db_connection/: builder.py
src/db_connection/connectors/: base.py
src/db_connection/connectors/db/: bigquery.py  postgres.py
src/db_connection/connectors/storage/: gcs.py  local.py
src/scripts/: extract_to_gcs.ipynb  extract_to_gcs.py  load_to_storage.py  population_index_processing.py  sequence_index_processing.py
src/utils/: spark_utils.py
tests/: test_1.py  test_db_connections.py  test_storage_connections.py
